--- a/projects/discussion-ui/src/lib/components/tag-all-discussion/tag-all-discussion.component.html
+++ b/projects/discussion-ui/src/lib/components/tag-all-discussion/tag-all-discussion.component.html
@@ -1,6 +1,6 @@
 <div class="main-div">
     <div class="flex flex-1 margin-top-xl">
-        <h2 class="margin-remove-bottom tagtitle" [ngStyle]="getBgColor(tagName)">{{tagName}}</h2>
+        <h2 class="margin-remove-bottom tagtitle" class="tag">{{tagName}}</h2>
     </div>
     <div>
         <span>&nbsp;</span>
