--- a/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
+++ b/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
@@ -1,3 +1,62 @@
-.df-start-btn{
+.df-start-btn {
     margin-bottom: 1rem;
+}
+
+.container1 {
+    display: flex;
+}
+
+.container2 {
+    display: flex;
+    justify-content: space-between;
+}
+
+#add-discussion {
+    border-radius: 8px;
+    width: 100%;
+    border: solid 1px rgba(0, 0, 0, 0.16);
+    padding: 20px;
+    margin-bottom: 30px;
+    background: #ffffff;
+    cursor: pointer;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+#search-discussions {
+    border-radius: 8px;
+    width: 20%;
+    border: solid 1px rgba(0, 0, 0, 0.16);
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    background: #ffffff;
+    cursor: pointer;
+    font-weight: 400;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+    float: right;
+    /* background-image: url(./../../../../assets/images/search-icon.png); */
+    /* background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center; */
+}
+
+#filter-posts {
+    border-radius: 8px;
+    width: 25%;
+    border: solid 1px rgba(0, 0, 0, 0.16);
+    padding: 10px 20px;
+    margin-bottom: 20px;
+    background: #ffffff;
+    font-weight: 600;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+    appearance: none;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 1rem center;
+    background-size: 1em;
+}
+
+#topic-scroll::-webkit-scrollbar {
+    width: 0px;
 }
