--- a/projects/discussion-ui/src/lib/components/discuss-tags/discuss-tags.component.scss
+++ b/projects/discussion-ui/src/lib/components/discuss-tags/discuss-tags.component.scss
@@ -1,5 +1,5 @@
-::ng-deep:root{
-	--df-tag-empty-bg:var(--df-common-bg);
+::ng-deep:root {
+	--df-tag-empty-bg: var(--df-common-bg);
 }
 
 .sb-search-box {
@@ -50,35 +50,40 @@
 	}
 }
 
-.tag-empty-container{
+.tag-empty-container {
 	background: var(--white);
 	background: var(--df-tag-empty-bg);
 	color: var(--df-text);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 1.5rem;
-    height: 100%;
-    border-radius: 0.25rem;
-    min-height: 28.125rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 1.5rem;
+	height: 100%;
+	border-radius: 0.25rem;
+	min-height: 28.125rem;
 
-	.tag-empty-img{
-      width: 100%;
-	  max-width: 13.875rem;
+	.tag-empty-img {
+		width: 100%;
+		max-width: 13.875rem;
 	}
 
-	.tag-empty-label{
+	.tag-empty-label {
 		font-size: 0.875rem;
 		font-weight: bold;
 		margin: 1.5rem 0 0.75rem 0;
 		color: var(--black) !important;
 	}
 
-	.tag-empty-text{
+	.tag-empty-text {
 		font-size: 0.875rem;
 		font-weight: normal;
 		text-align: center;
 		color: var(--black) !important;
 	}
+}
+
+.tag {
+	border: solid 1px rgba(0, 0, 0, 0.04);
+	background: rgba(0, 0, 0, 0.04);
 }
