--- a/projects/discussion-ui/src/lib/components/side-pannel/side-pannel.component.html
+++ b/projects/discussion-ui/src/lib/components/side-pannel/side-pannel.component.html
@@ -1,7 +1,7 @@
 <ul class="sb-sidebar-menu pl-0" *ngIf="!hideSidePanel">
   <!-- <li class="df-sidebar-menu-list" *ngIf="false" (click)="navigate('home', $event)" id="all-discussions"><a>All discussions</a></li> -->
   <li *ngFor='let d of menu' class="df-sidebar-menu-list" tabindex="0" role="link" [ngClass]="{'menu-active': isActive(d.route)}"
-    (click)="navigate(d.route, $event)" id="d.route"><a>{{d.label}}</a></li>
+    (click)="navigate(d.route, $event)" id="d.route"><a>{{d.label == 'Categories' ? 'All discussions': d.label}}</a></li>
     <!-- <li class="df-sidebar-menu-list" id="leader-board"><a>Leaderboard</a></li> -->
 </ul>
 
@@ -13,7 +13,7 @@
       <div class="overlay-sidebar__menu__content">
         <ul class="sb-sidebar-menu-mob pl-0">
           <li *ngFor='let d of menu' class="df-sidebar-menu-list" tabindex="0" role="link" [ngClass]="{'menu-active': isActive(d.route)}"
-          (click)="navigate(d.route, $event)" id="d.route"><a>{{d.label}}</a></li>
+          (click)="navigate(d.route, $event)" id="d.route"><a>{{d.label == 'Categories' ? 'All discussions': 'd.label'}}</a></li>
           <!-- <li class="df-sidebar-menu-list" tabindex="0" role="link" *ngIf="false" (click)="navigate('home', $event)" id="all-discussions"><a>All discussions</a></li>
           <li class="df-sidebar-menu-list" tabindex="0" role="link" [ngClass]="{'menu-active': selectedTab === 'categories'}" (click)="navigate('categories', $event)" id="discussion-categories"><a>Categories</a></li>
           <li class="df-sidebar-menu-list" tabindex="0" role="link"[ngClass]="{'menu-active': selectedTab === 'tags'}" (click)="navigate('tags', $event)" id="discussion-tags"><a>Tags</a></li>
