--- a/projects/discussion-ui/src/lib/components/tag-all-discussion/tag-all-discussion.component.scss
+++ b/projects/discussion-ui/src/lib/components/tag-all-discussion/tag-all-discussion.component.scss
@@ -9,3 +9,9 @@
     justify-content: center;
     border-radius: 1.25rem 0.25rem 0.25rem 1.25rem;
 }
+
+.tag {
+    border: solid 1px rgba(0, 0, 0, 0.04);
+    background: rgba(0, 0, 0, 0.04);
+    padding: 10px;
+}
