--- a/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
+++ b/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
@@ -15,7 +15,7 @@
     border-radius: 8px;
     width: 100%;
     border: solid 1px rgba(0, 0, 0, 0.16);
-    padding: 20px;
+    padding: 10px 12px;
     margin-bottom: 30px;
     background: #ffffff;
     cursor: pointer;
