--- a/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.scss
+++ b/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.scss
@@ -53,7 +53,7 @@
   }
   
   @media only screen and (max-width: 1800px) and (min-width: 768px){
-          width: 90%;
+          width: 90% !important;
           margin-left: auto !important;
           margin-right: auto !important;
   }
