--- a/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.html
+++ b/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.html
@@ -1,5 +1,5 @@
 <div class="sbt-inside-page-container ui container">
-    <div class="df-header">
+    <!-- <div class="df-header">
         <button type="button" class="df-btn df-btn-normal df-btn-primary df-back-btn" tabindex="0" autofocus
             role="button" (click)="goBack()">
             <img src="./assets/discussion-ui/images/back-img.png" alt="back icon" />
@@ -10,7 +10,7 @@
             Close
             <img src="./assets/discussion-ui/images/close.png" alt="close icon" />
         </button>
-    </div>
+    </div> -->
 
     <div class="discussion-forum-content" [ngStyle]="{'grid-template-columns': (showSidebar==true) ? '1fr 4fr' : 'unset'}">
         <div class="discuss-left-panel" *ngIf="showSidebar==true">
