--- a/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.scss
+++ b/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.scss
@@ -33,6 +33,7 @@
 }
 
 .discussion-forum-content {
+  margin-top: 3rem;
   display: grid;
   // grid-template-columns: 1fr 4fr;
   grid-gap: 1.5rem;
