--- a/demo/src/assets/discussion-ui/styles/global.scss
+++ b/demo/src/assets/discussion-ui/styles/global.scss
@@ -197,9 +197,8 @@
 //no data in card
 .no-card-content {
   cursor: pointer;
-  // box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
-  //   0 1px 3px 0 rgba(0, 0, 0, 0.12);
-  border: solid 1px rgba(0, 0, 0, 0.16);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 1px 3px 0 rgba(0, 0, 0, 0.12);
   background: var(--df-card-bg);
   color: var(--df-text);
   flex: 1;
@@ -280,3 +279,5 @@
 .df-btn-tertiary:hover {
   background-color: var(--tertiary-400);
 }
+
+
