--- a/projects/discussion-ui/src/lib/components/discuss-start/discuss-start.component.scss
+++ b/projects/discussion-ui/src/lib/components/discuss-start/discuss-start.component.scss
@@ -44,10 +44,12 @@
       }
 
       .start-form-label {
-        display: inline-block;
-        margin-bottom: 0.5rem;
-        font-size: 0.8125rem;
+        display: block;
+        margin: 0 0 0.28571429rem;
+        color: #000000de;
+        font-size: .92857143em;
         font-weight: 700;
+        text-transform: none;
       }
 
       .start-form-field {
@@ -63,13 +65,19 @@
         }
 
         .start-form-field-control {
+          // width: 300px!important;
+          border-radius: 8px;
+          font-family: Lato,Arial,Helvetica,sans-serif;
+          font-size: 14px!important;
+          font-weight: 400!important;
+          color: #0009!important;
+
           background-color: var(--df-modal-field-control-bg);
           border: 0.0625rem solid var(--gray-200);
-          border-radius: 0.1875rem;
-          color: var(--df-text);
+          // color: var(--df-text);
           display: block;
-          font-size: 0.8125rem;
-          font-family: sans-serif;
+          // font-size: 0.8125rem;
+          // font-family: sans-serif;
           position: relative;
           width: 96%;
           cursor: pointer;
@@ -136,7 +144,6 @@
     padding: 0.25rem 0.5rem;
     margin: 0.5rem 0;
     background: var(--df-field-control-bg);
-    border-radius: 0.1875rem;
     border-bottom: .0625rem solid var(--gray-200) !important;
   }
 
