--- a/projects/discussion-ui/src/lib/components/discuss-tags/discuss-tags.component.scss
+++ b/projects/discussion-ui/src/lib/components/discuss-tags/discuss-tags.component.scss
@@ -84,6 +84,6 @@
 }
 
 .tag {
-	border: solid 1px rgba(0, 0, 0, 0.04);
-	background: rgba(0, 0, 0, 0.04);
+	background-color: #e0e0e0;
+    color: #000000de;
 }
