--- a/projects/discussion-ui/src/lib/elements/discuss-card/discuss-card.component.scss
+++ b/projects/discussion-ui/src/lib/elements/discuss-card/discuss-card.component.scss
@@ -24,6 +24,9 @@
     font-weight: 700;
     word-break: break-word;
   }
+  .opacity-70 {
+    opacity: 0.7;
+  }
 
   .discuss-card-subtitle {
     margin: 20px 0px 15px;
