few more Ui changes

--- a/projects/discussion-ui/assets/styles/global.scss
+++ b/projects/discussion-ui/assets/styles/global.scss
@@ -104,8 +104,6 @@
       .filter-option {
         background: var(--df-tab-bg);
         padding: 0.5rem 1rem;
-        box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
-          0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
         font-size: 0.875rem;
         font-weight: 700;
         margin-right: 0.75rem;
@@ -117,6 +115,7 @@
         white-space: nowrap;
         text-decoration: none;
         color: var(--df-tab-text);
+        border: 1px solid var(--primary);
         &:first-child {
           margin-left: 0;
         }
@@ -155,6 +154,8 @@
     padding: 0.5rem 1rem;
     border-radius: 1.5rem;
     cursor: pointer;
+    background-color: #e0e0e0;
+    color: #000000de;
   }
 }
 
