--- a/projects/discussion-ui/src/lib/elements/discuss-card/discuss-card.component.html
+++ b/projects/discussion-ui/src/lib/elements/discuss-card/discuss-card.component.html
@@ -40,7 +40,7 @@
     </ng-container>
   </div>
   <!-- /Card content -->
-  <hr />
+  <hr class="horizontal-line" />
   <!-- Card footer -->
   <div class="discuss-card-comments">
     <div class="comments-content">
@@ -55,7 +55,7 @@
         <span class="body-two opacity-70">{{discussionData.viewcount || 0}} Views</span>
       </span>
     </div>
-    <div class="comments-count">{{((discussionData.postcount || 1) -1) }}
+    <div class="comments-count sub-heading-two">{{((discussionData.postcount || 1) -1) }}
         comments
     </div>
   </div>
