--- a/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
+++ b/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
@@ -57,3 +57,8 @@
 #topic-scroll::-webkit-scrollbar {
     width: 0px;
 }
+
+.focus-visble:focus-visible {
+    border-color: #85b7d9 !important;
+    border-radius: 0px;
+}
