--- a/projects/discussion-ui/src/lib/elements/discuss-card/discuss-card.component.scss
+++ b/projects/discussion-ui/src/lib/elements/discuss-card/discuss-card.component.scss
@@ -124,7 +124,8 @@
   }
 
   hr {
-    margin: 20px 0px 20px;
-    border: solid 0.5px rgba(0, 0, 0, 0.16);
+    margin: 20px 0px;
+    border: 1px solid rgba(0, 0, 0, 0.04);
+    opacity: 1;
   }
 }
