--- a/projects/discussion-ui/src/lib/elements/related-discussion/related-discussion.component.html
+++ b/projects/discussion-ui/src/lib/elements/related-discussion/related-discussion.component.html
@@ -1,6 +1,6 @@
-<h5 aria-label="Related discussions" class="related-discuss-label">Related discussions</h5>
+<h5 aria-label="Related discussions" class="sub-heading-one related-discuss-label">Related discussions</h5>
 <ng-container *ngIf="relatedDiscussions && relatedDiscussions.length > 0">
-    <div *ngFor="let discussion of relatedDiscussions | slice:0:5;" class="related-discuss-card df-card" tabindex="0">
+    <div *ngFor="let discussion of relatedDiscussions | slice:0:5;" class="body-two related-discuss-card df-card" tabindex="0">
         <label role="link" tabindex="0" aria-label="related discussion post df-text-color"
             class="related-discuss-card-content discuss-user-label" (click)="getDiscussion(discussion)"
             [innerHTML]="discussion?.title">
