--- a/projects/discussion-ui/src/lib/elements/post-reply/post-reply.component.css
+++ b/projects/discussion-ui/src/lib/elements/post-reply/post-reply.component.css
@@ -25,6 +25,9 @@
     outline: 0;
     padding: 0.5rem 0.875rem;
 }
+.text-content:focus-visible {
+    border-color: 1px solid #85b7d9!important
+}
 
 .updatePostActions {
     display: flex;
