--- a/projects/discussion-ui/src/lib/components/discuss-start/discuss-start.component.html
+++ b/projects/discussion-ui/src/lib/components/discuss-start/discuss-start.component.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="start-form-content" [ngClass]="{ 'is-invalid': showError('subTitle') }">
-          <label class="start-form-label">Discussion topic*</label>
+          <label class="sub-heading-one start-form-label">Discussion topic*</label>
           <div class="start-form-field">
             <input [ngClass]="{'is-invalid' : isFieldValid('question')}" class="start-form-field-control" placeholder="Type here (minimum 8 characters)"
               formControlName="question" #question maxlength="1000" />
@@ -29,7 +29,7 @@
 
         <div class="start-form-content">
           <div class="start-form-field">
-            <label class="start-form-label" for="description">Please elaborate your question or idea here*</label>
+            <label class="sub-heading-one start-form-label" for="description">Please elaborate your question or idea here*</label>
             <textarea [ngClass]="{'is-invalid' : isFieldValid('description')}" minlength="8" class="start-form-field-control" rows="8" formControlName="description"
               #description name="moretext" placeholder="Type here (minimum 8 characters)" id="description"></textarea>
           </div>
@@ -39,7 +39,7 @@
         </div>
 
         <div #postTags [ngClass]="{ 'is-invalid': showError('tags') }" class="start-tags">
-          <label class="mb-0">Tags</label>
+          <label class="sub-heading-one mb-0">Tags</label>
           <div *ngFor="let tag of postTagsArray">
             {{ tag }}
           </div>
