--- a/projects/discussion-ui/src/lib/components/discussion-details/discussion-details.component.scss
+++ b/projects/discussion-ui/src/lib/components/discussion-details/discussion-details.component.scss
@@ -389,8 +389,9 @@
 }
 
 .tag {
-    border: solid 1px rgba(0, 0, 0, 0.04);
-    background: rgba(0, 0, 0, 0.04);
+    cursor: pointer;
+    background-color: #e0e0e0;
+    color: #000000de;
 }
 
 .tags {
