--- a/projects/discussion-ui/src/lib/elements/related-discussion/related-discussion.component.scss
+++ b/projects/discussion-ui/src/lib/elements/related-discussion/related-discussion.component.scss
@@ -5,8 +5,7 @@
 .related-discuss-card {
 	padding: 1rem;
     display: flex;
-	box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
-    background: var(--df-related-card-bg);
+    border: 1px solid #00000029 !important;
     color: var(--df-text);
     margin-bottom: 1rem;
     flex-direction: column;
