--- a/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
+++ b/projects/discussion-ui/src/lib/components/discuss-home/discuss-home.component.css
@@ -40,6 +40,7 @@
 
 #filter-posts {
     width: 25%;
+    min-width: 160px;
     border: solid 1px rgba(0, 0, 0, 0.16);
     padding: 10px 20px;
     margin-bottom: 20px;
