--- a/projects/discussion-ui/src/lib/components/side-pannel/side-pannel.component.scss
+++ b/projects/discussion-ui/src/lib/components/side-pannel/side-pannel.component.scss
@@ -67,7 +67,7 @@
   .overlay-sidebar {
     height: 100vh;
     width: 100%;
-    overflow: hidden;
+    // overflow: hidden;
     background: rgba(0, 0, 0, .4);
     top: 0;
     left: 0;
@@ -83,15 +83,16 @@
     &__menu {
       position: relative;
       top: 0;
-      height: 100%;
+      // height: 100%;
+      padding-bottom: 20px;
       width: 15rem;
       right: 0;
       z-index: 100000;
       overflow-y: auto;
       overflow-x: hidden;
       background-color: var(--df-overlay-sidebar-bg-menu);
-      box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.2),
-        0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 1);
+      // box-shadow: 0 8px 10px -5px rgba(0, 0, 0, 0.2),
+      //   0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 1);
 
       .close-btn {
         font-size: 2.5rem;
