--- a/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.scss
+++ b/projects/discussion-ui/src/lib/components/lib-entry/lib-entry.component.scss
@@ -2,6 +2,10 @@
   --df-header-bg:var(--df-common-bg);
 }
 
+.discussion-banner {
+  width: 100%;
+}
+
 .df-header {
   display: flex;
   align-items: center;
