--- a/projects/discussion-ui/src/lib/components/side-pannel/side-pannel.component.scss
+++ b/projects/discussion-ui/src/lib/components/side-pannel/side-pannel.component.scss
@@ -68,7 +68,7 @@
     height: 100vh;
     width: 100%;
     // overflow: hidden;
-    background: rgba(0, 0, 0, .4);
+    // background: rgba(0, 0, 0, .4);
     top: 0;
     left: 0;
     right: 0;
